Adicionado Configurações para redes socias

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>e-licencie</title>
+
+    <!-- Meta dados de redes Sociais -->
+    <meta
+      property="og:image"
+      content="<%= BASE_URL %>miniatura.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta
+      name="description"
+      content="Mais produtividade e menos risco, e-licencie é uma maneira simples e versátil de gerenciar suas licenças e condicionantes ambientais"
+    />
+    <meta
+      name="keywords"
+      content="licenças, licenciamentos, gestão, ambiental, condicionantes, alertas, vencimentos, prazos, fatma, ibama"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="theme-color" content="#688c00" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Meta dados de redes Sociais -->
   </head>
   <body>
     <noscript>
